--- a/Views/Attendant/GetByName.cshtml
+++ b/Views/Attendant/GetByName.cshtml
@@ -1,8 +1,9 @@
 ﻿@model IEnumerable<SMS_MVCDTO.Models.DTOs.AttendantDTOs.AttendantResponseModel>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Dashboard";
 }
+
 @{
     if (TempData["Success"] != null)
     {
@@ -14,7 +15,40 @@
     }
 }
 
-<h1>Index</h1>
+
+<h1>Result</h1>
+
+<div class="container1">
+
+    <div class="box box2">
+        <form asp-action="GetByStaffId">
+            <input type="search" placeholder="Search by ID.." aria-label="Search" name="staffId">
+            <button type="submit">Search</button>
+        </form>
+    </div>
+    <div class="box box3">
+        <form asp-controller="Attendant" asp-action="GetByEmail">
+            <input type="text" placeholder="Search by Email.." name="email">
+            <button type="submit">Search</button>
+        </form>
+    </div>
+    <div class="box box4">
+        <form asp-action="GetByName">
+            <input type="text" placeholder="Search by Name.." name="name">
+            <button type="submit">Search</button>
+        </form>
+    </div>
+
+</div>
+
+
+
+<div class="container">
+
+    <div class="box box1"> side bar </div>
+</div>
+
+
 
 <p>
     <a asp-action="Create">Create New</a>
@@ -23,6 +57,9 @@
 <table class="table table-info">
     <thead>
         <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.Data.StaffId)
+            </th>
 
             <th>
                 @Html.DisplayNameFor(model => model.Data.FirstName)
@@ -30,45 +67,13 @@
             <th>
                 @Html.DisplayNameFor(model => model.Data.LastName)
             </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Data.StaffId)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Data.Email)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Data.PhoneNumber)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Data.HomeAddress)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Data.ResidentialAddress)
-            </th>
 
-            <th>
-                @Html.DisplayNameFor(model => model.Data.DateOfBirth)
-            </th>
             <th>
                 @Html.DisplayNameFor(model => model.Data.Gender)
             </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Data.MaritalStatus)
-            </th>
+
             <th>
                 @Html.DisplayNameFor(model => model.Data.UserRole)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Data.BankAccountNumber)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Data.BankName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Data.GuarantorName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Data.GuarantorPhoneNumber)
             </th>
 
             <th></th>
@@ -79,6 +84,9 @@
         @foreach (var item in Model)
         {
             <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Data.StaffId)
+                </td>
 
                 <td>
                     @Html.DisplayFor(modelItem => item.Data.FirstName)
@@ -86,55 +94,22 @@
                 <td>
                     @Html.DisplayFor(modelItem => item.Data.LastName)
                 </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Data.StaffId)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Data.Email)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Data.PhoneNumber)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Data.HomeAddress)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Data.ResidentialAddress)
-                </td>
 
-                <td>
-                    @Html.DisplayFor(modelItem => item.Data.DateOfBirth)
-                </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Data.Gender)
                 </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Data.MaritalStatus)
-                </td>
+
                 <td>
                     @Html.DisplayFor(modelItem => item.Data.UserRole)
                 </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Data.BankAccountNumber)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Data.BankName)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Data.GuarantorName)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Data.GuarantorPhoneNumber)
-                </td>
+
 
                 <td>
-                    <a asp-action="Edit" asp-route-staffId="@item.Data.StaffId">Edit</a> |
-                    <a asp-action="Details" asp-route-staffId="@item.Data.StaffId">Details</a> |
-                    <a asp-action="DeletePreview" asp-route-staffId="@item.Data.StaffId">Delete</a>
+
+                    <a asp-action="Details" asp-route-staffId="@item.Data.StaffId">Details</a>
                 </td>
             </tr>
         }
     </tbody>
 </table>
-
 
