--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,54 +1,53 @@
 .bodycontains {
-  position: relative;
-  width: 87%;
-  float: right;
+    position: relative;
+    width: 87%;
+    float: right;
 }
 
 .navigatebody {
-
-  position: relative;
-  width: 13%;
-  margin-top: 5px;
-  float: left;
+    position: relative;
+    width: 13%;
+    margin-top: 5px;
+    float: left;
 }
 
 .loginform {
-  position: absolute;
-  top: 50px;
-  width: 430px;
-  height: 520px;
-  /* position: absolute; */
-  transform: translate(-50%, -50%);
-  left: 50%;
-  top: 50%;
-  background-color: #b3afaf;
+    position: absolute;
+    top: 50px;
+    width: 430px;
+    height: 520px;
+    /* position: absolute; */
+    transform: translate(-50%, -50%);
+    left: 50%;
+    top: 50%;
+    background-color: #b3afaf;
 }
 
 .formcont {
-  position: absolute;
-  z-index: 1;
-  background-color: aqua;
+    position: absolute;
+    z-index: 1;
+    background-color: aqua;
 }
 
 html {
-  font-size: 14px;
+    font-size: 14px;
 }
 
 @media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
+    html {
+        font-size: 16px;
+    }
 }
 
 
 
 html {
-  position: relative;
-  min-height: 100%;
+    position: relative;
+    min-height: 100%;
 }
 
 body {
-  margin-bottom: 60px;
+    margin-bottom: 60px;
 }
 
 
@@ -68,6 +67,10 @@ body {
 
 
 /* colour for each box */
+.box0 {
+    background: hsla(0, 0%, 100%, 0);
+}
+
 .box1 {
     background: #3498db;
 }
@@ -122,6 +125,7 @@ body {
     height: inherit;
     margin: 10px;
     padding: 10px;
+    border-radius: 25px;
     /* flex: 1;  */
 }
 
@@ -131,16 +135,23 @@ body {
     display: flex;
     justify-content: flex-end;
     width: auto;
-    
 }
 
 .container {
     display: flex;
     justify-content: flex-end;
-  
 }
 
 .box1 {
     flex-basis: 900px;
     flex-grow: 1;
 }
+
+.box0 {
+    /*flex-basis: 900px;
+    flex-grow: 1;*/
+}
+
+input {
+    border-radius: 25px;
+  }
