--- a/Views/SuperAdmin/Dashboard.cshtml
+++ b/Views/SuperAdmin/Dashboard.cshtml
@@ -1,6 +1,20 @@
 ﻿@using SMS_MVCDTO.Models.DTOs.SuperAdminDTOs;
 @model IEnumerable<SuperAdminResponseModel>
 
+
+
+@{
+    ViewData["Title"] = "Super Admin Dashboard";
+
+    if (TempData["Success"] != null)
+    {
+        <h2>@TempData["success"]</h2>
+    }
+    if (TempData["failed"] != null)
+    {
+        <h2>@TempData["failed"]</h2>
+    }
+}
 <p>
     <a asp-action="Create">Create New</a>
 </p>
