--- a/Views/Attendant/Dashboard.cshtml
+++ b/Views/Attendant/Dashboard.cshtml
@@ -16,7 +16,7 @@
 }
 
 
-<h1>Index</h1>
+<h1>Attendant Dashboard</h1>
 
 <div class="container1">
 
@@ -54,7 +54,7 @@
 
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Create New Attendant</a>
 </p>
 
 <table class="table table-info">
@@ -112,8 +112,13 @@
                     <a asp-action="Details" asp-route-staffId="@item.Data.StaffId">Details</a>
                 </td>
             </tr>
+
         }
     </tbody>
 </table>
+            <br />
+            <br />
+            <br />
+            <br />
 
 
