--- a/Views/SalesManager/Index.cshtml
+++ b/Views/SalesManager/Index.cshtml
@@ -25,8 +25,8 @@
         <br />
         <a asp-controller="Attendant" asp-action="Create">Add new attendant</a>
         <br />
-        <a asp-controller="Attendant" asp-action="Index">View all attendant</a>
-        <br />
+        @* <a asp-controller="Attendant" asp-action="Index">View all attendant</a>
+        <br />*@
 
     </div>
 </div>
@@ -38,11 +38,11 @@
         <br />
         <a asp-controller="Product" asp-action="Create">Add new product</a>
         <br />
-        <a asp-controller="Product" asp-action="Index">Manage all products</a>
-        <br />
+        @* <a asp-controller="Product" asp-action="Index">Manage all products</a>
+        <br />*@
     </div>
 </div>
-<a asp-controller="Transaction" asp-action="Index">Manage Transactions</a>
+<a asp-controller="Transaction" asp-action="Dashboard">Manage Transactions</a>
 <br />
 <a asp-controller="Product" asp-action="Dashboard">Manage Inventory</a>
 <br />
