--- a/Views/Transaction/Index.cshtml
+++ b/Views/Transaction/Index.cshtml
@@ -1,34 +1,66 @@
 ﻿@model IEnumerable<SMS_MVCDTO.Models.DTOs.TransactionDTOs.TransactionResponseModel>
+
 @{
-    ViewData["Title"] = "Create";
+
+    ViewData["Title"] = "Transaction";
     if (TempData["success"] != null)
     {
         <h2>@TempData["success"]</h2>
     }
+
     if (TempData["failed"] != null)
     {
         <h2>@TempData["failed"]</h2>
     }
-}
 
+}
 
 <h1>Transactions</h1>
+<div class="container1">
 
+    <div class="box box2">
+        <form asp-action="Details">
+            <input type="search" placeholder="Search by Ref. No.." aria-label="Search" name="referenceNo">
+            <button type="submit">Search</button>
+        </form>
+    </div>
+
+    <div class="box box3">
+        <form asp-action="GetByName">
+            <input type="text" placeholder="Search by Customer.." name="name">
+            <button type="submit">Search</button>
+        </form>
+    </div>
+
+    <div class="box box4">
+        <form asp-action="GetByAttendant">
+            <input type="text" placeholder="Search by Attendant Id.." name="staffId">
+            <button type="submit">Search</button>
+        </form>
+    </div>
+
+</div>
+
+<div class="container">
+
+    <div class="box box1"> side bar </div>
+</div>
+
+@*
 <p>
-    <a asp-action="Create">Buy A product</a>
-</p>
-@{
-    //int i = 0;
-}
+    <a asp-action="Index" asp-route-id="1" >Sort by Date</a>
+</p>*@
+
 <table class="table table-info col-md-4">
     <thead>
         <tr>
+
             <th>
                 @Html.DisplayNameFor(model => model.Data.ReferenceNo)
             </th>
 
             <th>
-                @Html.DisplayNameFor(model => model.Data.Created)
+                @Html.ActionLink("Created", "Index", "Transaction",1)
             </th>
 
             <th>
@@ -78,14 +110,14 @@
                 <td>
                     @Html.DisplayFor(modelItem => item.Data.Quantity)
                 </td>
-                
+
                 <td>
                     @Html.DisplayFor(modelItem => item.Data.TotalAmount)
                 </td>
 
 
                 <td>
-                    <a asp-action="Details" asp-route-Barcode="@item.Data.ReferenceNo">Details</a>
+                    <a asp-action="Details" asp-route-referenceNo="@item.Data.ReferenceNo">Details</a>
                 </td>
             </tr>
         }
