--- a/Views/Customer/Create.cshtml
+++ b/Views/Customer/Create.cshtml
@@ -70,13 +70,13 @@
 
             <div class="form-group">
                 <label asp-for="Password" class="control-label"></label>
-                <input asp-for="Password" class="form-control" />
+                <input asp-for="Password" type="password" class="form-control" />
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
             
             <div class="form-group">
                 <label asp-for="ConfirmPassword" class="control-label"></label>
-                <input asp-for="ConfirmPassword" class="form-control" />
+                <input asp-for="ConfirmPassword" type="password" class="form-control" />
                 <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
             </div>
 
@@ -89,6 +89,11 @@
     <div>
         <a asp-action="Index" class="btn btn-warning">Back to List</a>
     </div>
+
+    <br />
+    <br />
+    <br />
+    <br />
 
 }
 
