--- a/Views/SalesManager/Create.cshtml
+++ b/Views/SalesManager/Create.cshtml
@@ -109,7 +109,7 @@
 
 				<div class="form-group">
 					<label asp-for="Password" class="control-label"></label>
-					<input asp-for="Password" class="form-control" />
+					<input asp-for="Password" type="password" class="form-control" />
 					<span asp-validation-for="Password" class="text-danger"></span>
 				</div>
 
@@ -124,6 +124,11 @@
 	<div>
 		<a asp-action="Index" class="btn btn-warning">Back to List</a>
 	</div>
+
+	<br />
+	<br />
+	<br />
+	<br />
 }
 @section Scripts {
 	@{
