--- a/Views/SuperAdmin/Create.cshtml
+++ b/Views/SuperAdmin/Create.cshtml
@@ -2,131 +2,149 @@
 @model SMS_MVCDTO.Models.DTOs.SuperAdminDTOs.CreateSuperAdminRequestModel
 
 @{
-	ViewData["Title"] = "Create";
-	if (TempData["Success"] != null)
-	{
-		<h2>@TempData["success"]</h2>
-	}
-	if (TempData["failed"] != null)
-	{
-		<h2>@TempData["failed"]</h2>
-	}
+    ViewData["Title"] = "Create";
+    if (TempData["Success"] != null)
+    {
+        <h2>@TempData["success"]</h2>
+    }
+    if (TempData["failed"] != null)
+    {
+        <h2>@TempData["failed"]</h2>
+    }
 }
 @{
-	<h1>Create</h1>
+    <h1>Create</h1>
 
-	<h4>Super Admin</h4>
-	<hr />
-	<div class="row">
-		<div class="col-md-4">
-			<form asp-action="Create">
+    <h4>Super Admin</h4>
+    <hr />
+    <div class="row">
+        <div class="col-md-4">
+            <form asp-action="Create">
 
-				<div class="form-group">
-					<label asp-for="FirstName" class="control-label"></label>
-					<input asp-for="FirstName" class="form-control" />
-					<span asp-validation-for="FirstName" class="text-danger"></span>
-				</div>
-				<div class="form-group">
-					<label asp-for="LastName" class="control-label"></label>
-					<input asp-for="LastName" class="form-control" />
-					<span asp-validation-for="LastName" class="text-danger"></span>
-				</div>
-
-
-				<div class="form-group">
-					<label asp-for="Email" class="control-label"></label>
-					<input asp-for="Email" class="form-control" />
-					<span asp-validation-for="Email" class="text-danger"></span>
-				</div>
-
-				<div class="form-group">
-					<label asp-for="PhoneNumber" class="control-label"></label>
-					<input asp-for="PhoneNumber" class="form-control" />
-					<span asp-validation-for="PhoneNumber" class="text-danger"></span>
-				</div>
-				<div class="form-group">
-					<label asp-for="HomeAddress" class="control-label"></label>
-					<input asp-for="HomeAddress" class="form-control" />
-					<span asp-validation-for="HomeAddress" class="text-danger"></span>
-				</div>
-				<div class="form-group">
-					<label asp-for="ResidentialAddress" class="control-label"></label>
-					<input asp-for="ResidentialAddress" class="form-control" />
-					<span asp-validation-for="ResidentialAddress" class="text-danger"></span>
-				</div>
+                <div class="form-group">
+                    <label asp-for="FirstName" class="control-label"></label>
+                    <input asp-for="FirstName" class="form-control" />
+                    <span asp-validation-for="FirstName" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="LastName" class="control-label"></label>
+                    <input asp-for="LastName" class="form-control" />
+                    <span asp-validation-for="LastName" class="text-danger"></span>
+                </div>
 
 
-				<div class="form-group">
-					<label asp-for="DateOfBirth" class="control-label"></label>
-					<input asp-for="DateOfBirth" class="form-control" />
-					<span asp-validation-for="DateOfBirth" class="text-danger"></span>
-				</div>
+                <div class="form-group">
+                    <label asp-for="Email" class="control-label"></label>
+                    <input asp-for="Email" class="form-control" />
+                    <span asp-validation-for="Email" class="text-danger"></span>
+                </div>
+
+                <div class="form-group">
+                    <label asp-for="PhoneNumber" class="control-label"></label>
+                    <input asp-for="PhoneNumber" class="form-control" />
+                    <span asp-validation-for="PhoneNumber" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="HomeAddress" class="control-label"></label>
+                    <input asp-for="HomeAddress" class="form-control" />
+                    <span asp-validation-for="HomeAddress" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="ResidentialAddress" class="control-label"></label>
+                    <input asp-for="ResidentialAddress" class="form-control" />
+                    <span asp-validation-for="ResidentialAddress" class="text-danger"></span>
+                </div>
+                @*
+            testing date formation
+            <div class="form-group">
+            @Html.LabelFor(m => m.DateOfBirth)
+            @Html.TextBoxFor(m => m.DateOfBirth,"{0:MM/dd/yyyy}")
+            </div>
+
+            testing date formation
+            <div class="form-group">
+            @Html.LabelFor(m => m.DateOfBirth)
+            @Html.EditorFor(m => m.DateOfBirth,"{0:MM/dd/yyyy}")
+            </div>
+            *@
 
 
-
-
-
-				<div class="form-group">
-					<label asp-for="Gender" class="control-label" for="Gender"></label>
-					<select asp-for="Gender" asp-items="Html.GetEnumSelectList<GenderType>()"></select>
-					<span asp-validation-for="Gender" class="text-danger"></span>
-				</div>
-
-
-
-
-				<div class="form-group">
-					<label asp-for="MaritalStatus" class="control-label" for="MaritalStatus"></label>
-					<select asp-for="MaritalStatus" asp-items="Html.GetEnumSelectList<MaritalStatusType>()"></select>
-					<span asp-validation-for="Gender" class="text-danger"></span>
-				</div>
-
-
-				<div class="form-group">
-					<label asp-for="BankAccountNumber" class="control-label"></label>
-					<input asp-for="BankAccountNumber" class="form-control" />
-					<span asp-validation-for="BankAccountNumber" class="text-danger"></span>
-				</div>
-				<div class="form-group">
-					<label asp-for="BankName" class="control-label"></label>
-					<input asp-for="BankName" class="form-control" />
-					<span asp-validation-for="BankName" class="text-danger"></span>
-				</div>
-
-				<div class="form-group">
-					<label asp-for="GuarantorName" class="control-label"></label>
-					<input asp-for="GuarantorName" class="form-control" />
-					<span asp-validation-for="GuarantorName" class="text-danger"></span>
-				</div>
-
-				<div class="form-group">
-					<label asp-for="GuarantorPhoneNumber" class="control-label"></label>
-					<input asp-for="GuarantorPhoneNumber" class="form-control" />
-					<span asp-validation-for="GuarantorPhoneNumber" class="text-danger"></span>
-				</div>
+                <div class="form-group">
+                    <label asp-for="DateOfBirth" class="control-label"></label>
+                    <input asp-for="DateOfBirth" class="form-control" />
+                    <span asp-validation-for="DateOfBirth" class="text-danger"></span>
+                </div>
 
 
 
-				<div class="form-group">
-					<label asp-for="Password" class="control-label"></label>
-					<input asp-for="Password" class="form-control" />
-					<span asp-validation-for="Password" class="text-danger"></span>
-				</div>
 
 
-				<div class="form-group">
-					<input type="submit" value="Create" class="btn btn-success" />
-				</div>
-			</form>
-		</div>
-	</div>
+                <div class="form-group">
+                    <label asp-for="Gender" class="control-label" for="Gender"></label>
+                    <select asp-for="Gender" asp-items="Html.GetEnumSelectList<GenderType>()"></select>
+                    <span asp-validation-for="Gender" class="text-danger"></span>
+                </div>
 
-	<div>
-		<a asp-action="Index" class="btn btn-warning">Back to List</a>
-	</div>
+
+
+
+                <div class="form-group">
+                    <label asp-for="MaritalStatus" class="control-label" for="MaritalStatus"></label>
+                    <select asp-for="MaritalStatus" asp-items="Html.GetEnumSelectList<MaritalStatusType>()"></select>
+                    <span asp-validation-for="Gender" class="text-danger"></span>
+                </div>
+
+
+                <div class="form-group">
+                    <label asp-for="BankAccountNumber" class="control-label"></label>
+                    <input asp-for="BankAccountNumber" class="form-control" />
+                    <span asp-validation-for="BankAccountNumber" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="BankName" class="control-label"></label>
+                    <input asp-for="BankName" class="form-control" />
+                    <span asp-validation-for="BankName" class="text-danger"></span>
+                </div>
+
+                <div class="form-group">
+                    <label asp-for="GuarantorName" class="control-label"></label>
+                    <input asp-for="GuarantorName" class="form-control" />
+                    <span asp-validation-for="GuarantorName" class="text-danger"></span>
+                </div>
+
+                <div class="form-group">
+                    <label asp-for="GuarantorPhoneNumber" class="control-label"></label>
+                    <input asp-for="GuarantorPhoneNumber" class="form-control" />
+                    <span asp-validation-for="GuarantorPhoneNumber" class="text-danger"></span>
+                </div>
+
+
+
+                <div class="form-group">
+                    <label asp-for="Password" class="control-label"></label>
+                    <input asp-for="Password" type="password" class="form-control" />
+                    <span asp-validation-for="Password" class="text-danger"></span>
+                </div>
+
+
+                <div class="form-group">
+                    <input type="submit" value="Create" class="btn btn-success" />
+                </div>
+            </form>
+        </div>
+    </div>
+
+    <div>
+        <a asp-action="Index" class="btn btn-warning">Back to List</a>
+    </div>
+
+    <br />
+    <br />
+    <br />
+    <br />
 }
 @section Scripts {
-	@{
-		await Html.RenderPartialAsync("_ValidationScriptsPartial");
-	}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 	}
