--- a/Views/SuperAdmin/Dashboard.cshtml
+++ b/Views/SuperAdmin/Dashboard.cshtml
@@ -102,7 +102,7 @@
                 </td>
 
                 <td>
-                    @Html.DisplayFor(modelItem => item.Data.DateOfBirth)
+                    @Html.DisplayFor(modelItem => item.Data.DateOfBirth,"{0:MM/dd/yyyy}")
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Data.Gender)
@@ -132,6 +132,11 @@
                     <a asp-action="DeletePreview" asp-route-staffId="@item.Data.StaffId">Delete</a>
                 </td>
             </tr>
+
+            <br />
+            <br />
+            <br />
+            <br />
         }
     </tbody>
 </table>
