--- a/Views/Transaction/Details.cshtml
+++ b/Views/Transaction/Details.cshtml
@@ -1,5 +1,61 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@model SMS_MVCDTO.Models.DTOs.TransactionDTOs.TransactionResponseModel
 @{
 }
+
+@{
+    ViewData["Title"] = "Transaction Details";
+}
+
+
+<div>
+    <h4>Product</h4>
+    <hr />
+    <dl class="row">
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Data.Created)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Data.Created)
+        </dd>
+
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Data.ReferenceNo)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Data.ReferenceNo)
+        </dd>
+
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Data.CustomerName)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Data.CustomerName)
+        </dd>
+
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Data.BarCode)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Data.BarCode)
+        </dd>
+
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Data.Quantity)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Data.Quantity)
+        </dd>
+   
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Data.TotalAmount)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Data.TotalAmount)
+        </dd>
+    </dl>
+</div>
+
+<div>
+    <a asp-action="Edit" asp-route-referenceNo="@Model.Data.ReferenceNo" class="btn btn-success">Edit</a>
+    <a asp-action="Index" class="btn btn-warning">Back to List</a>
+</div>
